# paper_watch

./: Dockerfile  GEMINI.md  INFRASTRUCTURE_DECISIONS.md  LICENSE  PROJECT_PLAN.md  README.md  README_GCP.md  cloudbuild.yaml  pyproject.toml  ralph_wiggum.py
scripts/: deploy.sh  setup_gcp.sh
src/paper_watch/: firebase.py  main.py  models.py
src/paper_watch/ingestion/: __init__.py  arxiv.py  ssrn.py
src/paper_watch/intelligence/: __init__.py  llm.py
src/paper_watch/reporting/: __init__.py  email_client.py  formatter.py
src/paper_watch/utils/: __init__.py  pdf.py
tests/: test_arxiv.py  test_email.py  test_llm.py  test_main.py  test_pdf.py  test_reporting.py  test_ssrn_client.py
